
    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules

1.2.2b4:
    Checks & Agents:
    * FIX: smart - not trying to parse unhandled lines to prevent errors

    Multisite:
    * FIX: Fixed problem with error during localization scanning
    * FIX: Fixed wrong localization right after a user changed its language

    Checks & Agents:
    * Linux agent: limit netstat to 10 seconds
    * ps: Allow %1, %2, .. instead of %s in process_inventory. That allows
      reordering of matched groups
    * mysql: fixed crash on computing IO information

    BI:
    * FIX: fixed invalid links to hosts and services in BI tree view
    * FIX: fix exception in top/down and bottom/up views
    * FIX: fix styling of top/down and bottom/up views (borders, padding)
    * Make titles of non-leaf tree nodes klickable

1.2.2b3:
    Checks & Agents:
    * FIX: Fixed date parsing code ignoring the seconds value in several checks
           (ad_replication, cups_queues, heartbeat_crm, mssql_backup, smbios_sel)
    * FIX: Fixed pnp template for apc_symmetra check when using multiple rrds

    Multisite:
    * FIX: Removed uuid module dependency to be compatible to python < 2.5
    * FIX: remove Javascript debug popup from multi-string input fields
    * FIX: list of strings (e.g. host list in rule editor) didn't work anymore

1.2.2b2:
    Checks & Agents:
    * Added dynamic thresholds to the oracle_tablespace check depending on the
      size of the tablespaces.

    BI:
    * FIX: fix exception in BI-Boxes views of host groups
    * FIX: fix problem where BI-Boxes were invisible if not previously unfolded

    Event Console:
    * FIX: support non-Ascii characters in matching expressions. Note:
           you need to edit and save each affected rule once in order
           to make the fix work.
    * FIX: Fixed exception when logging actions exectuted by mkeventd